# rust_epub

./: .gitignore  Cargo.toml
docs/: architecture.puml  listing_epub_ui.puml  load_epub_ui.puml  view_epub_ui.puml
examples/: iced.rs
resources/xhtml/: cover.xhtml  title_page.xhtml
resources/xml/: epub_container.xml
src/: content_opf.rs  domain.rs  epub.rs  iced.rs  infrastructure.rs  lib.rs  main.rs  manifest.rs  spine.rs  use_case.rs  utils.rs  zip_utils.rs
src/domain/: entity.rs  repository.rs
src/domain/entity/: content_opf.rs  epub.rs  epub_path.rs  manifest.rs  spine.rs
src/domain/repository/: epub_repository.rs
src/epub/: core.rs
src/infrastructure/: epub_repository_impl.rs
src/use_case/: interactor.rs  interface.rs
src/use_case/interactor/: list_epub.rs  load_epub.rs
src/use_case/interface/: list_epub.rs  load_epub.rs
src/utils/: zip_utils.rs
tests/: epub_test.rs  integration_test.rs  test_epub.rs
tests/resources/: epub_content_opf.xml  essential-scala.epub
