[package]
name = "rust_epub"
version = "0.1.0"
authors = ["Tomoya Igarashi <tomoya.igarashi.0510@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "1.0.42"
tokio = { version = "1.10.0", features = ["full"] }
zip = "0.5.13"
roxmltree = "0.14.1"
mime = "0.3.16"
iced = { version = "0.3.0", features = ["image", "debug", "tokio"] }
iced_native = "0.4.0"