[package]
name = "rust_epub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "~1"
tokio = { version = "~1", features = ["full"] }
async-trait = "~0.1"
zip = "~0.6"
roxmltree = "~0.15"
mime = "~0.3"
url = "~2.3"
